--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,4 @@ llama_index.embeddings.huggingface
 llama_index.llms.groq
 llama_index.llms.ollama
 llama_index.llms.openai
+llama_index.llms.anthropic
