--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,137 @@
-streamlit
-pyyaml
-llama_index
-llama_index.embeddings.huggingface
-llama_index.llms.groq
-llama_index.llms.ollama
-llama_index.llms.openai
-llama_index.llms.anthropic
+aiohappyeyeballs==2.4.3
+aiohttp==3.10.10
+aiosignal==1.3.1
+altair==5.4.1
+annotated-types==0.7.0
+anthropic==0.37.1
+anyio==4.6.2.post1
+attrs==24.2.0
+beautifulsoup4==4.12.3
+blinker==1.8.2
+boto3==1.35.49
+botocore==1.35.49
+cachetools==5.5.0
+certifi==2024.8.30
+charset-normalizer==3.4.0
+click==8.1.7
+dataclasses-json==0.6.7
+Deprecated==1.2.14
+dirtyjson==1.0.8
+distro==1.9.0
+filelock==3.16.1
+frozenlist==1.5.0
+fsspec==2024.10.0
+gitdb==4.0.11
+GitPython==3.1.43
+google-auth==2.35.0
+greenlet==3.1.1
+h11==0.14.0
+httpcore==1.0.6
+httpx==0.27.2
+huggingface-hub==0.26.1
+idna==3.10
+Jinja2==3.1.4
+jiter==0.6.1
+jmespath==1.0.1
+joblib==1.4.2
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+llama-cloud==0.1.4
+llama-index==0.11.20
+llama-index-agent-openai==0.3.4
+llama-index-cli==0.3.1
+llama-index-core==0.11.20
+llama-index-embeddings-huggingface==0.3.1
+llama-index-embeddings-openai==0.2.5
+llama-index-indices-managed-llama-cloud==0.4.0
+llama-index-legacy==0.9.48.post3
+llama-index-llms-anthropic==0.3.8
+llama-index-llms-groq==0.2.0
+llama-index-llms-ollama==0.3.4
+llama-index-llms-openai==0.2.16
+llama-index-llms-openai-like==0.2.0
+llama-index-multi-modal-llms-openai==0.2.3
+llama-index-program-openai==0.2.0
+llama-index-question-gen-openai==0.2.0
+llama-index-readers-file==0.2.2
+llama-index-readers-llama-parse==0.3.0
+llama-parse==0.5.12
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+marshmallow==3.23.0
+mdurl==0.1.2
+mpmath==1.3.0
+multidict==6.1.0
+mypy-extensions==1.0.0
+narwhals==1.10.0
+nest-asyncio==1.6.0
+networkx==3.4.2
+nltk==3.9.1
+numpy==1.26.4
+nvidia-cublas-cu12==12.4.5.8
+nvidia-cuda-cupti-cu12==12.4.127
+nvidia-cuda-nvrtc-cu12==12.4.127
+nvidia-cuda-runtime-cu12==12.4.127
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.2.1.3
+nvidia-curand-cu12==10.3.5.147
+nvidia-cusolver-cu12==11.6.1.9
+nvidia-cusparse-cu12==12.3.1.170
+nvidia-nccl-cu12==2.21.5
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.4.127
+ollama==0.3.3
+openai==1.52.2
+packaging==24.1
+pandas==2.2.3
+pillow==10.4.0
+propcache==0.2.0
+protobuf==5.28.3
+pyarrow==17.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pydantic==2.9.2
+pydantic_core==2.23.4
+pydeck==0.9.1
+Pygments==2.18.0
+pypdf==4.3.1
+python-dateutil==2.9.0.post0
+pytz==2024.2
+PyYAML==6.0.2
+referencing==0.35.1
+regex==2024.9.11
+requests==2.32.3
+rich==13.9.3
+rpds-py==0.20.0
+rsa==4.9
+s3transfer==0.10.3
+safetensors==0.4.5
+scikit-learn==1.5.2
+scipy==1.14.1
+sentence-transformers==3.2.1
+setuptools==75.2.0
+six==1.16.0
+smmap==5.0.1
+sniffio==1.3.1
+soupsieve==2.6
+SQLAlchemy==2.0.36
+streamlit==1.39.0
+striprtf==0.0.26
+sympy==1.13.1
+tenacity==8.5.0
+threadpoolctl==3.5.0
+tiktoken==0.8.0
+tokenizers==0.20.1
+toml==0.10.2
+torch==2.5.0
+tornado==6.4.1
+tqdm==4.66.5
+transformers==4.46.0
+triton==3.1.0
+typing-inspect==0.9.0
+typing_extensions==4.12.2
+tzdata==2024.2
+urllib3==2.2.3
+watchdog==5.0.3
+wrapt==1.16.0
+yarl==1.16.0
