--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,15 +4,15 @@ services:
     container_name: lka
     ports:
       - "8501:8501"
+    user: "1000:1000"
+    env_file:
+      - .env
+    environment:
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
+      - GROQ_API_KEY=${GROQ_API_KEY}
+      #  - OLLAMA_API_KEY=${OLLAMA_API_KEY}
+      - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY}
     volumes:
       - /home/mathieu/Notes:/app/data
       - /home/mathieu/Projets/docker/data/lka/storage:/app/storage
       - /home/mathieu/Projets/docker/data/lka/config:/app/config
-    environment:
-      - OPENAI_API_KEY=${OPENAI_API_KEY}
-      - GROQ_API_KEY=${GROQ_API_KEY}
-      - OLLAMA_API_KEY=${OLLAMA_API_KEY}
-      - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY}
-    env_file:
-      - .env
-    user: "1000:1000"
