--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,17 @@
 services:
   lka:
-    build: .
+    image: effraie/local-knowledge-assistant:v1.2.0
     container_name: lka
-    ports:
-      - "8501:8501"
     user: "1000:1000"
     env_file:
       - .env
+    ports:
+      - "8501:8501"
     environment:
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       - GROQ_API_KEY=${GROQ_API_KEY}
       - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY}
-      #  - OLLAMA_API_KEY=${OLLAMA_API_KEY}
+      - OLLAMA_API_KEY=${OLLAMA_API_KEY}
     volumes:
       - ${LKA_DATA_DIR}:/app/data
       - ${LKA_STORAGE_DIR}:/app/storage
